@@ -2,12 +2,6 @@ TODO:
 
 - nicks-list should have nick-pairs for attached/detached -state
 
-- !!! option to either...
-	- part channels
-	- send notice on each channel
-	- do nothing
-  when disconnected from the server (requrested feature)
-
 - reintroduce channels in specific order (order defined in miaurc)
 	- alphabetical order
 	- channels in miaurc, then channels from client in given order
